--- a/registration/src/main/resources/application.properties
+++ b/registration/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 # Configuration file
 # key = value
+
+quarkus.datasource.db-kind = postgresql
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/postgres-db
+quarkus.hibernate-orm.database.generation = update
+quarkus.datasource.username = registration
+quarkus.datasource.password = registration
+%dev.quarkus.hibernate-orm.log.sql = true
+
+quarkus.hibernate-orm.dialect=org.hibernate.dialect.PostgreSQL10Dialect
