--- a/registration/src/main/resources/application.properties
+++ b/registration/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # key = value
 
 quarkus.datasource.db-kind = postgresql
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/postgres-db
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/postgres
 quarkus.hibernate-orm.database.generation = update
 quarkus.datasource.username = registration
 quarkus.datasource.password = registration
